@@ -325,6 +325,9 @@ CUSTOM_SCREEN_HEIGHT 200  # height of the resolution
 CUSTOM_SCREEN_ASPECT 1    # aspect ratio of the pixels (only affects game
                           # rendering, not the menu)
 
+PLAYER_RANDOM_COLOR 0     # if set to 1, a random generator will try to pick a color for you that
+                          # differs from the other players on the server.
+
 ############################################################################################
 #
 # camera settings
